--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
-                <h2 style="padding: 50px;" class="titulo">y las últimas noticias del mundo musical.</h2><br>
+                <h2 style="padding: 5%;" class="titulo">y las últimas noticias del mundo musical.</h2><br>
                 <a class="twitter-timeline" data-width="700" data-height="440" data-theme="ligth"
                     href="https://twitter.com/thebackstageweb">Tweets by thebackstageweb</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
