--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/estilo-reproductor.css">
     <link rel="stylesheet" href="css/estilo-menu.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
+
 
 
     <script src="js/jquery-3.2.1.js"></script>
@@ -54,15 +54,17 @@
     </header>
 
 
-    <form action='https://musica-lly.000webhostapp.com/index-reproductor.html' id='searchthis' method='get' style='display:inline;'>
+    <form action='https://musica-lly.000webhostapp.com/index-reproductor.html' id='searchthis' method='get'
+        style='display:inline;'>
         <input id='b-query' maxlength='255' name='q' placeholder="Buscar Canciones...">
-        <input class='blue' id='inputBusqueda' type='submit' value='Buscar'/>
+        <input class='blue' id='inputBusqueda' type='submit' value='Buscar' />
     </form>
-    <br><br>
 
-    <div id="cp_widget_58654fe6-b6b1-4251-bfc0-b2d1ea062a19">...</div>
+    <br><br><br><br>
+
+    <div id="cp_widget_5926d15f-58a4-4f87-bd06-4fd4250810ae">...</div>
     <script type="text/javascript">
-        var cpo = []; cpo["_object"] = "cp_widget_58654fe6-b6b1-4251-bfc0-b2d1ea062a19"; cpo["_fid"] = "AYKARre0K91p";
+        var cpo = []; cpo["_object"] = "cp_widget_5926d15f-58a4-4f87-bd06-4fd4250810ae"; cpo["_fid"] = "AQKA7r-7Gm_z";
         var _cpmp = _cpmp || []; _cpmp.push(cpo);
         (function () {
             var cp = document.createElement("script"); cp.type = "text/javascript";
