--- a/index-videos.html
+++ b/index-videos.html
@@ -57,16 +57,13 @@
     
     <br><br>
 
-    <div id="cp_widget_e7815d40-f320-4b88-9086-aa83268f7330">...</div>
-    <script type="text/javascript">
-        var cpo = []; cpo["_object"] = "cp_widget_e7815d40-f320-4b88-9086-aa83268f7330"; cpo["_fid"] = "AkBAhr-0KpYW";
+    <div id="cp_widget_0992f866-c9e7-43c3-81f0-411e24233afb">...</div><script type="text/javascript">
+        var cpo = []; cpo["_object"] ="cp_widget_0992f866-c9e7-43c3-81f0-411e24233afb"; cpo["_fid"] = "AIFA9qelGCFq";
         var _cpmp = _cpmp || []; _cpmp.push(cpo);
-        (function () {
-            var cp = document.createElement("script"); cp.type = "text/javascript";
-            cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-            var c = document.getElementsByTagName("script")[0];
-            c.parentNode.insertBefore(cp, c);
-        })(); </script>
+        (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+        cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+        var c = document.getElementsByTagName("script")[0];
+        c.parentNode.insertBefore(cp, c); })(); </script>
 
 
 </body>
