--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -56,15 +56,13 @@
 
     <form action='https://musica-lly.000webhostapp.com/index-reproductor.html' id='searchthis' method='get'
         style='display:inline;'>
-        <input id='b-query' maxlength='255' name='q' placeholder="Buscar Canciones...">
+        <input id='b-query' maxlength='255' type="search" name='q' placeholder="Buscar Canciones...">
         <input class='blue' id='inputBusqueda' type='submit' value='Buscar' />
     </form>
 
-    <br><br><br><br>
-
-    <div id="cp_widget_5926d15f-58a4-4f87-bd06-4fd4250810ae">...</div>
+    <div id="cp_widget_3eb98a2d-154d-4457-84d1-19ceb8a8efff">...</div>
     <script type="text/javascript">
-        var cpo = []; cpo["_object"] = "cp_widget_5926d15f-58a4-4f87-bd06-4fd4250810ae"; cpo["_fid"] = "AQKA7r-7Gm_z";
+        var cpo = []; cpo["_object"] = "cp_widget_3eb98a2d-154d-4457-84d1-19ceb8a8efff"; cpo["_fid"] = "AMFAfo-pH6ns";
         var _cpmp = _cpmp || []; _cpmp.push(cpo);
         (function () {
             var cp = document.createElement("script"); cp.type = "text/javascript";
@@ -73,8 +71,36 @@
             c.parentNode.insertBefore(cp, c);
         })(); </script>
 
-    <br><br>
+
+
+
+
+
+
+    <footer>
+
+
+        <div class="svg-hero-footer" style="height: 100px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: rgb(46, 44, 44);"></path>
+            </svg>
+            
+            <div class="footer">
+                <center>
+                    <img src="img/logo.png" alt="Musically" height="100px">
+
+                    <ul>
+                        <td><a href="index.html">Provacidad</a></li>
+                        <td><a href="index.html">Contactar</a></li>
+                    </ul>
+
+                    <p>© 2020 Todos los derechos reservados, Musically</p>
+                </center>
+            </div>
+    </footer>
 
 </body>
+
 
 </html>
