Update footer, reproducer, videos

--- a/index-videos.html
+++ b/index-videos.html
@@ -50,20 +50,50 @@
             </svg></div>
     </header>
 
-    <form action='https://musica-lly.000webhostapp.com/index-videos.html' id='searchthis' method='get' style='display:inline;'>
+    <form action='https://musica-lly.000webhostapp.com/index-videos.html' id='searchthis' method='get'
+        style='display:inline;' class="form_buscador">
         <input id='b-query' maxlength='255' name='q' placeholder="Buscar videos...">
-        <input class='blue' id='inputBusqueda' type='submit' value='Buscar'/>
+        <input class='blue' id='inputBusqueda' type='submit' value='Buscar' />
     </form>
-    
+
     <br><br>
 
-    <div id="cp_widget_0992f866-c9e7-43c3-81f0-411e24233afb">...</div><script type="text/javascript">
-        var cpo = []; cpo["_object"] ="cp_widget_0992f866-c9e7-43c3-81f0-411e24233afb"; cpo["_fid"] = "AIFA9qelGCFq";
+    <div id="cp_widget_d275d956-54ee-4ef9-adf1-fb5d3969f75a">...</div>
+    <script type="text/javascript">
+        var cpo = []; cpo["_object"] = "cp_widget_d275d956-54ee-4ef9-adf1-fb5d3969f75a"; cpo["_fid"] = "AkOA9p-iOqI2";
         var _cpmp = _cpmp || []; _cpmp.push(cpo);
-        (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-        cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-        var c = document.getElementsByTagName("script")[0];
-        c.parentNode.insertBefore(cp, c); })(); </script>
+        (function () {
+            var cp = document.createElement("script"); cp.type = "text/javascript";
+            cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+            var c = document.getElementsByTagName("script")[0];
+            c.parentNode.insertBefore(cp, c);
+        })(); </script>
+
+
+    <footer>
+
+
+        <div class="svg-hero-footer" style="height: 80px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: rgb(46, 44, 44);"></path>
+            </svg></div>
+
+        <div class="footer">
+            <center>
+                <img src="img/logo.png" alt="Musically" height="100px">
+
+                <ul>
+                    <td><a href="index.html">Provacidad</a></li>
+                    <td><a href="index.html">Contactar</a></li>
+                </ul>
+
+                <p>© 2020 Todos los derechos reservados, Musically</p>
+            </center>
+        </div>
+
+    </footer>
+
 
 
 </body>
