--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -56,9 +56,11 @@
 
     <form action='https://musica-lly.000webhostapp.com/index-reproductor.html' id='searchthis' method='get'
         style='display:inline;'>
-        <input id='b-query' maxlength='255' type="search" name='q' placeholder="Buscar Canciones...">
+        <input id='b-query' maxlength='255' type="search" name='q' placeholder="Buscar Canciones..."
+        class="form_buscador">
         <input class='blue' id='inputBusqueda' type='submit' value='Buscar' />
     </form>
+
 
     <div id="cp_widget_3eb98a2d-154d-4457-84d1-19ceb8a8efff">...</div>
     <script type="text/javascript">
@@ -74,17 +76,14 @@
 
 
 
-
-
-
     <footer>
 
 
-        <div class="svg-hero-footer" style="height: 100px; overflow: hidden;"><svg viewBox="0 0 500 150"
+        <div class="svg-hero-footer" style="height: 80px; overflow: hidden;"><svg viewBox="0 0 500 150"
                 preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
                     style="stroke: none; fill: rgb(46, 44, 44);"></path>
-            </svg>
+            </svg></div>
             
             <div class="footer">
                 <center>
