Update Mensaje exitoso

--- a/NewMessage.html
+++ b/NewMessage.html
@@ -17,8 +17,10 @@
     <section class="form_wrap">
         
         <section class="mensaje-exito">
+            <img src="img/logo.png" alt="Musically.com">
             <h1>SU MENSAJE SE ENVIÓ EXITOSAMENTE</h1>
             <p>Su sugerencia será contestada lo mas pronto posible</p>
+            <p>El equipo de Musically se lo agradece.</p>
             <a href="index.html">Enviar nuevo mensaje</a>
         </section>
     </section>
