--- a/index.html
+++ b/index.html
@@ -140,20 +140,20 @@
     <div id="eventos"></div>
     <section class="eventos">
         <div class="contenedor">
-            <h2 class="titulo">Mantente al tando de eventos cerca de ti</h2>
+            <h2 class="titulo">Mantente al tanto de eventos cerca de ti</h2>
             <article class="eventos-cont">
 
                 <!--Eventos Cerca-->
-                <img src="img/calendario.png" alt="" height="50%" width="60%">
+                <img src="img/calendario.png" alt="Eventos" height="50%" width="60%" class="imagen-calendario">
 
-                <a class="twitter-timeline" data-width="750" data-height="440" data-theme="dark"
-                    href="https://twitter.com/backstagemcr?ref_src=twsrc%5Etfw">Tweets by backstagemcr</a>
+                <a class="twitter-timeline" data-width="900" data-height="500" data-theme="dark"
+                    href="https://twitter.com/backstagemcr?ref_src=twsrc%5Etfw">Tweets de backstagemcr</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
                 <h2 style="padding: 5%;" class="titulo">y las últimas noticias del mundo musical.</h2><br>
-                <a class="twitter-timeline" data-width="900" data-height="440" data-theme="ligth"
-                    href="https://twitter.com/thebackstageweb">Tweets by thebackstageweb</a>
+                <a class="twitter-timeline" data-width="900" data-height="500" data-theme="ligth"
+                    href="https://twitter.com/thebackstageweb">Tweets de BackstageMagazine</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
@@ -363,7 +363,7 @@
 
     <footer id="contacto">
         <div class="contenedor">
-            <h2 class="titulo">Contact us</h2>
+            <h2 class="titulo">Contactanos</h2>
             <form class="form" action="contacto.php" method="POST">
                 <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre" required>
                 <input class="input" type="email" name="email" id="email" placeholder="Email" required>
