--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <h1>Musically.com</h1>
                         <img src="img/logo-header.png" alt="Logo" height="50%" width="60%">
                         <p>Musically.com Es una pagina web creada por dos estudiantes universitarios de la carrera de
-                            Ing.Software de la Universidad Técnica Nacional(UTN).</p>
-                        <p>Como propuesta al proyecto final del curso de apliciones en entorno web.</p>
+                            Ing.Software de la Universidad Técnica Nacional.</p>
+                        <p>Como propuesta al proyecto final del curso de aplicaciones en entorno web.</p>
                     </div>
                     <a href="#" class="btn-close-popup">X</a>
                 </div>
