--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -62,16 +62,13 @@
     </form>
 
 
-    <div id="cp_widget_3eb98a2d-154d-4457-84d1-19ceb8a8efff">...</div>
-    <script type="text/javascript">
-        var cpo = []; cpo["_object"] = "cp_widget_3eb98a2d-154d-4457-84d1-19ceb8a8efff"; cpo["_fid"] = "AMFAfo-pH6ns";
+    <div id="cp_widget_c181d978-784c-41c0-9f0a-383c638175fb">...</div><script type="text/javascript">
+        var cpo = []; cpo["_object"] ="cp_widget_c181d978-784c-41c0-9f0a-383c638175fb"; cpo["_fid"] = "AMFAfo-pH6ns";
         var _cpmp = _cpmp || []; _cpmp.push(cpo);
-        (function () {
-            var cp = document.createElement("script"); cp.type = "text/javascript";
-            cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-            var c = document.getElementsByTagName("script")[0];
-            c.parentNode.insertBefore(cp, c);
-        })(); </script>
+        (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+        cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+        var c = document.getElementsByTagName("script")[0];
+        c.parentNode.insertBefore(cp, c); })(); </script>
 
 
 
